@startuml

skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline

skinparam classAttributeIconSize 0

class RegisterEmployeeUI {}

class RegisterEmployeeController {
    + RegisterEmployeeController(agencyRepository, roleRepository)
    + getAgencyRepository()
    + getRoleRepository()
    + registerEmployee(name, passport's card number, tax number,\naddress, email address, telephone number, agency, role)

}

class Repositories {
    - Repositories()
    + getInstance() : Repositories
    + getAgencyRepository()
    + getPassword()
    + getRoleRepository()
}

class AgencyRepository {}

class Agency {}

class RoleRepository {}

class Role {}

class EmployeeRepository {}

class PasswordGenerator {}

class AuthenticationRepository {
    + userExists (email)
}

class Employee {
    - String name
    - String passport's card number
    - String tax number
    - String address
    - String email address
    - String telephone number
    - Integer phone number
    - String agency
    - String role
    - String password

    + create(name, passport's card number, tax number,\naddress, email address, telephone number, agency, role, password)
}

class SystemAdministrator {
    - phone number
    - email
    - password
}


Repositories -> Repositories : instance

RegisterEmployeeUI .> RegisterEmployeeController

RegisterEmployeeController .> Repositories : repositories

Repositories --> "1" AgencyRepository

AgencyRepository --> "*" Agency

Repositories --> "1" RoleRepository

RoleRepository --> "*" Role

Repositories --> "1" EmployeeRepository

EmployeeRepository --> "*" Employee

Repositories --> "1" AuthenticationRepository

RegisterEmployeeController ..> Employee : EmployeeRepository

Employee --> SystemAdministrator : createdBy

PasswordGenerator .-> Employee : password


@enduml